tests/NormalTests/paczka1/fuzzy1/48767389.err
Error in line 4: edUKB S929 18,8
Error in line 9: 22x A696 65,2
Error in line 5: Dxctayd A819 47,2
Error in line 13: Dxctayd A696 1,3
Error in line 21: 22x S929 -1,7
Error in line 22: F3Uk S901 21,7
Error in line 19: edUKB A696 6,1
Error in line 23: F3Uk S929 88,5
Error in line 30: edUKB S929 137,3
Error in line 11: 22x S929 10,4
